BTL1_2_NHP/src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from e:/2_LEARNING_BKU/2_File_2/K22_HK242/pplvt/BTL2_NHP - Copy/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'return'", 
                     "'func'", "'type'", "'struct'", "'interface'", "'string'", 
                     "'int'", "'float'", "'boolean'", "'const'", "'var'", 
                     "'continue'", "'break'", "'range'", "'nil'", "'true'", 
                     "'false'", "'+'", "'-'", "'*'", "'/'", "'%'", "':='", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", 
                     "'||'", "'!'", "'='", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FOR", "RETURN", "FUNC", 
                      "TYPE", "STRUCT", "INTERFACE", "STRING", "INT", "FLOAT", 
                      "BOOL", "CONST", "VAR", "CONTINUE", "BREAK", "RANGE", 
                      "NIL", "TRUE", "FALSE", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "NEWASS", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", 
                      "AND", "OR", "NEGATION", "ASSIGN", "ADDVAL", "SUBVAL", 
                      "MULVAL", "DIVVAL", "MODVAL", "POINT", "R_OPEN", "R_CLOSE", 
                      "CUR_OPEN", "CUR_CLOSE", "SQ_OPEN", "SQ_CLOSE", "COMMA", 
                      "SEMI_COLON", "COLON", "ID", "INT_LIT", "FLOAT_LIT", 
                      "STRING_LIT", "CMTLINE", "CMTBLOCK", "WS", "NEWLINE", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_program_lst = 1
    RULE_program_mem = 2
    RULE_declared = 3
    RULE_literal = 4
    RULE_array_lit = 5
    RULE_array_type = 6
    RULE_array_lit_lst = 7
    RULE_array_lit_mem = 8
    RULE_array_lit_mem_single = 9
    RULE_struct_lit = 10
    RULE_list_struct_elem_lst = 11
    RULE_list_struct_elem_mem = 12
    RULE_struct_type = 13
    RULE_struct_attribute_lst = 14
    RULE_struct_attribute_mem = 15
    RULE_interface_type = 16
    RULE_interface_method_lst = 17
    RULE_interface_method_mem = 18
    RULE_interface_method_param_lst = 19
    RULE_interface_method_param_lst_mem = 20
    RULE_id_lst = 21
    RULE_var_decl = 22
    RULE_var_decl_with_init = 23
    RULE_var_decl_non_init = 24
    RULE_prim_type = 25
    RULE_var_type = 26
    RULE_const_decl = 27
    RULE_func_decl = 28
    RULE_para_lst = 29
    RULE_para_mem = 30
    RULE_method_decl = 31
    RULE_method_receiver_lst = 32
    RULE_method_receiver_mem = 33
    RULE_block_func = 34
    RULE_block_func_lst = 35
    RULE_block_func_mem = 36
    RULE_stmt_block = 37
    RULE_stmt = 38
    RULE_for_stmt = 39
    RULE_for_stmt_01 = 40
    RULE_for_stmt_01_init = 41
    RULE_for_stmt_01_cond = 42
    RULE_for_stmt_01_upda = 43
    RULE_for_stmt_01_var_decl_init = 44
    RULE_for_stmt_01_upda_incr = 45
    RULE_for_stmt_01_assign = 46
    RULE_for_stmt_02 = 47
    RULE_for_stmt_03 = 48
    RULE_if_stmt = 49
    RULE_if_stmt_rec = 50
    RULE_if_stmt_type1 = 51
    RULE_if_stmt_type2 = 52
    RULE_else_stmt = 53
    RULE_break_stmt = 54
    RULE_cont_stmt = 55
    RULE_return_stmt = 56
    RULE_call_func = 57
    RULE_func_call = 58
    RULE_assign_stmt_semi = 59
    RULE_assign_stmt = 60
    RULE_increase_stmt = 61
    RULE_increase_stmt_semi = 62
    RULE_expr_list = 63
    RULE_expr = 64
    RULE_expr1 = 65
    RULE_expr2 = 66
    RULE_comp_op = 67
    RULE_expr3 = 68
    RULE_add_op = 69
    RULE_expr4 = 70
    RULE_mul_op = 71
    RULE_expr5 = 72
    RULE_unary_op = 73
    RULE_expr6 = 74
    RULE_expr6_postfix_lst = 75
    RULE_expr6_postfix_mem = 76
    RULE_method_args = 77
    RULE_expr7 = 78
    RULE_array_access = 79
    RULE_array_index = 80
    RULE_attribute_chain = 81
    RULE_lhs_expr = 82
    RULE_property_chain = 83

    ruleNames =  [ "program", "program_lst", "program_mem", "declared", 
                   "literal", "array_lit", "array_type", "array_lit_lst", 
                   "array_lit_mem", "array_lit_mem_single", "struct_lit", 
                   "list_struct_elem_lst", "list_struct_elem_mem", "struct_type", 
                   "struct_attribute_lst", "struct_attribute_mem", "interface_type", 
                   "interface_method_lst", "interface_method_mem", "interface_method_param_lst", 
                   "interface_method_param_lst_mem", "id_lst", "var_decl", 
                   "var_decl_with_init", "var_decl_non_init", "prim_type", 
                   "var_type", "const_decl", "func_decl", "para_lst", "para_mem", 
                   "method_decl", "method_receiver_lst", "method_receiver_mem", 
                   "block_func", "block_func_lst", "block_func_mem", "stmt_block", 
                   "stmt", "for_stmt", "for_stmt_01", "for_stmt_01_init", 
                   "for_stmt_01_cond", "for_stmt_01_upda", "for_stmt_01_var_decl_init", 
                   "for_stmt_01_upda_incr", "for_stmt_01_assign", "for_stmt_02", 
                   "for_stmt_03", "if_stmt", "if_stmt_rec", "if_stmt_type1", 
                   "if_stmt_type2", "else_stmt", "break_stmt", "cont_stmt", 
                   "return_stmt", "call_func", "func_call", "assign_stmt_semi", 
                   "assign_stmt", "increase_stmt", "increase_stmt_semi", 
                   "expr_list", "expr", "expr1", "expr2", "comp_op", "expr3", 
                   "add_op", "expr4", "mul_op", "expr5", "unary_op", "expr6", 
                   "expr6_postfix_lst", "expr6_postfix_mem", "method_args", 
                   "expr7", "array_access", "array_index", "attribute_chain", 
                   "lhs_expr", "property_chain" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FOR=3
    RETURN=4
    FUNC=5
    TYPE=6
    STRUCT=7
    INTERFACE=8
    STRING=9
    INT=10
    FLOAT=11
    BOOL=12
    CONST=13
    VAR=14
    CONTINUE=15
    BREAK=16
    RANGE=17
    NIL=18
    TRUE=19
    FALSE=20
    ADD=21
    SUB=22
    MUL=23
    DIV=24
    MOD=25
    NEWASS=26
    EQ=27
    NEQ=28
    LT=29
    LTE=30
    GT=31
    GTE=32
    AND=33
    OR=34
    NEGATION=35
    ASSIGN=36
    ADDVAL=37
    SUBVAL=38
    MULVAL=39
    DIVVAL=40
    MODVAL=41
    POINT=42
    R_OPEN=43
    R_CLOSE=44
    CUR_OPEN=45
    CUR_CLOSE=46
    SQ_OPEN=47
    SQ_CLOSE=48
    COMMA=49
    SEMI_COLON=50
    COLON=51
    ID=52
    INT_LIT=53
    FLOAT_LIT=54
    STRING_LIT=55
    CMTLINE=56
    CMTBLOCK=57
    WS=58
    NEWLINE=59
    ERROR_CHAR=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_lst(self):
            return self.getTypedRuleContext(MiniGoParser.Program_lstContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.program_lst()
            self.state = 169
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_mem(self):
            return self.getTypedRuleContext(MiniGoParser.Program_memContext,0)


        def program_lst(self):
            return self.getTypedRuleContext(MiniGoParser.Program_lstContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_program_lst




    def program_lst(self):

        localctx = MiniGoParser.Program_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_lst)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.program_mem()
                self.state = 172
                self.program_lst()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.program_mem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_memContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declared(self):
            return self.getTypedRuleContext(MiniGoParser.DeclaredContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Var_declContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Const_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_program_mem




    def program_mem(self):

        localctx = MiniGoParser.Program_memContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_program_mem)
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.declared()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.var_decl()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 179
                self.const_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Func_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Method_declContext,0)


        def struct_type(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_typeContext,0)


        def interface_type(self):
            return self.getTypedRuleContext(MiniGoParser.Interface_typeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_declared




    def declared(self):

        localctx = MiniGoParser.DeclaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declared)
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.func_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.method_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 184
                self.struct_type()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 185
                self.interface_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MiniGoParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(MiniGoParser.FLOAT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(MiniGoParser.STRING_LIT, 0)

        def TRUE(self):
            return self.getToken(MiniGoParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MiniGoParser.FALSE, 0)

        def NIL(self):
            return self.getToken(MiniGoParser.NIL, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_literal




    def literal(self):

        localctx = MiniGoParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 63050394785021952) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_type(self):
            return self.getTypedRuleContext(MiniGoParser.Array_typeContext,0)


        def CUR_OPEN(self):
            return self.getToken(MiniGoParser.CUR_OPEN, 0)

        def array_lit_lst(self):
            return self.getTypedRuleContext(MiniGoParser.Array_lit_lstContext,0)


        def CUR_CLOSE(self):
            return self.getToken(MiniGoParser.CUR_CLOSE, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_array_lit




    def array_lit(self):

        localctx = MiniGoParser.Array_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array_lit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.array_type()
            self.state = 191
            self.match(MiniGoParser.CUR_OPEN)
            self.state = 192
            self.array_lit_lst()
            self.state = 193
            self.match(MiniGoParser.CUR_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SQ_OPEN(self):
            return self.getToken(MiniGoParser.SQ_OPEN, 0)

        def SQ_CLOSE(self):
            return self.getToken(MiniGoParser.SQ_CLOSE, 0)

        def array_type(self):
            return self.getTypedRuleContext(MiniGoParser.Array_typeContext,0)


        def prim_type(self):
            return self.getTypedRuleContext(MiniGoParser.Prim_typeContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.ID)
            else:
                return self.getToken(MiniGoParser.ID, i)

        def INT_LIT(self):
            return self.getToken(MiniGoParser.INT_LIT, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_array_type




    def array_type(self):

        localctx = MiniGoParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(MiniGoParser.SQ_OPEN)
            self.state = 196
            _la = self._input.LA(1)
            if not(_la==52 or _la==53):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 197
            self.match(MiniGoParser.SQ_CLOSE)
            self.state = 202
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [47]:
                self.state = 199
                self.array_type()
                pass
            elif token in [9, 10, 11, 12]:
                self.state = 200
                self.prim_type()
                pass
            elif token in [52]:
                self.state = 201
                self.match(MiniGoParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_lit_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_lit_mem(self):
            return self.getTypedRuleContext(MiniGoParser.Array_lit_memContext,0)


        def COMMA(self):
            return self.getToken(MiniGoParser.COMMA, 0)

        def array_lit_lst(self):
            return self.getTypedRuleContext(MiniGoParser.Array_lit_lstContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_array_lit_lst




    def array_lit_lst(self):

        localctx = MiniGoParser.Array_lit_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_lit_lst)
        try:
            self.state = 209
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 204
                self.array_lit_mem()
                self.state = 205
                self.match(MiniGoParser.COMMA)
                self.state = 206
                self.array_lit_lst()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 208
                self.array_lit_mem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_lit_memContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CUR_OPEN(self):
            return self.getToken(MiniGoParser.CUR_OPEN, 0)

        def array_lit_lst(self):
            return self.getTypedRuleContext(MiniGoParser.Array_lit_lstContext,0)


        def CUR_CLOSE(self):
            return self.getToken(MiniGoParser.CUR_CLOSE, 0)

        def array_lit_mem_single(self):
            return self.getTypedRuleContext(MiniGoParser.Array_lit_mem_singleContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_array_lit_mem




    def array_lit_mem(self):

        localctx = MiniGoParser.Array_lit_memContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_lit_mem)
        try:
            self.state = 217
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [46, 49]:
                self.enterOuterAlt(localctx, 1)
